open domain urls in new window by default add external link icon to signify leaving the site add nowrap to entry domain element to prevent awkward line breaks

--- a/assets/styles/components/_entry.scss
+++ b/assets/styles/components/_entry.scss
@@ -331,6 +331,7 @@
   &__domain {
     color: var(--kbin-meta-text-color);
     font-size: .7rem;
+    white-space: nowrap;
 
     a {
       color: var(--kbin-meta-text-color);
